# sticker-bot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yaml  nginx.conf  pyproject.toml  pytest.ini  test_image_paste.py
src/: __main__.py  config.py
src/bot/: bot.py
src/stickerpack/: service.py
src/stickerpack/domain/: stickerpack.py
src/webapp/: admin.py  app.py  middleware.py  schemas.py
tests/: conftests.py  loadtest.py
