[tool.poetry]
name = "sticker-bot"
version = "0.1.0"
description = ""
authors = ["Tetenkov Alexander <forthe@ya.ru>"]
readme = "README.md"
packages = [{include = "sticker_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^2.25.1"
loguru = "^0.7.0"
fastapi = "^0.99.0"
pillow = "^10.0.0"
uvicorn = "^0.22.0"
pydantic = "1.10.10"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
mypy = "^1.4.1"
pre-commit = "^3.3.3"
types-pillow = "^9.5.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
